<resources>
    //*Menú Login*//
    <string name="til_bienvenida_nombre">nombre</string>
    <string name="til_bienvenida_ingrese_nombre">Ingrese su nombre</string>
    <string name="btn_ingresar">Ingresar</string>

    //*Menú Login*//
    <string name="app_name">La tiendita</string>
    <string name="til_usuario">Usuario</string>
    <string name="til_pass">Clave</string>

    <string name="btn_olvidarContraseña">¿Olvidaste tu contraseña?</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_registrarAqui">Registrate aquí</string>

    <string name="til_noTienes">¿No tienes Cuenta?</string>


    //*Menú inicio*//

    <string name="til_gestionaTuNegocio">Gestiona tu Negocio</string>
    <string name="til_queQuieres">¿Qué quieres hacer?</string>

    <string name="btn_registrarProducto">Registrar Nuevo Producto</string>
    <string name="btn_gestionar">Gestionar Inventario de Productos</string>
    <string name="btn_listado">Ir a Listado de Compras</string>

    //*Agregar Listado Compras*//
    <string name="til_agregarListadoTitulo">Escribe un título</string>
    <string name="til_escribeTitulo">Escribe un título</string>
    <string name="btn_agregarListado">Nuevo listado de compras</string>

    //*Detalle de listado compras*//

    <string name="btn_guardar">Guardar</string>
    <string name="btn_eliminar">Eliminar</string>


    //*Confirmación eliminar listado o producto*//
    <string name="confirm_eliminar_listado">¿Quieres eliminar este listado?</string>
    <string name="confirm_eliminar_producto">¿Quieres eliminar este producto?</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_deshacer">Deshacer</string>
    <string name="producto_eliminado">¡Tu producto se ha eliminado con éxito!</string>
    <string name="listado_eliminado">¡Tu listado se ha eliminado con éxito!</string>

    //*Inventario de todos los productos*//

    <string name="til_productosInventario">Productos del inventario</string>
    <string name="til_subProductosInventario">Todos los productos registrados hasta el momento</string>
    <string name="til_advertencia_vencidos">(Si el producto está en color rojo al inicio de la lista, es por que está cercano a vencer en los próximos 7 días)</string>


    //*Inventario de todos los productos por tipo*//

    <string name="til_tipoProductosInventario">Tipo de Productos del Inventario</string>
    <string name="til_subTipoProductosInventario">Productos ordenados por tipo</string>

    //*Inventario por detalle del tipo de Producto*//

    <string name="til_detalleListaProducto">Detalle de Productos</string>
    <string name="til_subDetalleListaProducto">Detalle de los productos, según el tipo seleccionado</string>

    //*Menu inventario productos*//

    <string name="til_inventarioProductos">Gestiona tu Inventario</string>
    <string name="btn_verProductos">Ver todos los productos</string>
    <string name="btn_verPorTipo">Ver por tipo de producto</string>

    //*Registrar producto*//

    <string name="til_nombreProducto">Nombre producto</string>
    <string name="til_cantidadProducto">Cantidad</string>
    <string name="spinner_tipo_producto">Seleccione un tipo</string>>
    <string name="til_precioProducto">Precio del producto</string>
    <string name="til_fechaVencimientoProducto">Fecha Vencimiento</string>
    <string name="til_ubicacionProducto">Ubicación en tienda</string>
    <string name="txt_seleccionarOpcion">Seleccionar una Opción</string>
    <string name="txt_sugerencia">Sugerencia de precio</string>
    <string name="txt_precioAumentado">Precio Aumentado</string>
    <string name="txt_sugerenciPrecio">30% aumentado</string>
    <string name="btn_agregarProducto">Agregar producto</string>

    //*Listado de compras*//

    <string name="til_listadoCompras">Listado de compras</string>

    //*Agregar listado de compras*//

    <string name="til_titulo">Título</string>
    <string name="til_detalle_listado">Listado</string>

    //*Editar producto*//

    <string name="til_editarProducto">Editar Producto</string>

    //*Registrar usuario*//

    <string name="til_nombreUsuario">Nombre Usuario</string>
    <string name="til_nombreNegocio">Nombre del Negocio</string>
    <string name="til_email">Email</string>
    <string name="til_contraseñaRegistro">Contraseña</string>
    <string name="til_repetirContraseña">Repetir Contraseña</string>
    <string name="til_yaTienesCuenta">¿Ya tienes cuenta?</string>

    <string name="btn_iniciSesion">Inicia Sesión Aquí</string>
    <string name="btn_registrarme">Registrarme</string>
    <string name="title_activity_menu_desplegable">Menu_desplegable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    /*Listado todos los productos*/
    <string name="txt_todosLosProductos">Productos del Inventario</string>
    <string name="txt_todosLosProductosSub">Todos los productos registrados</string>

    /*Generales*/
    <string name="btn_atras">Atrás</string>
    <string name="btn_inicio">Inicio</string>

    /*errores*/

    <string name="error_campo_vacio">El campo es requerido</string>
    <string name="error_formato_string">Caracteres no válidos</string>
    <string name="error_formato_correo">Correo no valido</string>


</resources>